using SEM5_PI_WEBAPI.Domain.Shared;

namespace SEM5_PI_WEBAPI.Domain.VVN;

public interface IVesselVisitNotificationRepository : IRepository<VesselVisitNotification,VesselVisitNotificationId>
{
    
}